# proscenium

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  QA_NOTES.md  README.md  RELEASE.md  SPEC.md  index.html  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.claude/: launch.json  settings.json  settings.local.json
.github/workflows/: release.yml
docs/spikes/: 2026-06-25-player-embedding-architecture.md  2026-06-25-spike-b-render-api-poc.md  2026-06-25-spike-d-mse-multiview-poc.md  2026-06-26-macos-render-api-probe.md  2026-06-29-multi-source-and-stremio.md
scripts/: build.ps1  capture_window.ps1  cdp_probe.mjs  check_catalog.py  cleanup_player_e2e.py  cleanup_seed.py  inspect_db.py  layered_experiment.ps1  list_providers.py  make_icon.py  player_e2e.mjs  player_stall_probe.mjs  player_visual_check.mjs  repoint_e2e_channels.py  restore_active.py  search_e2e.mjs  seed_player_e2e.py  seed_provider.py  webview_alpha_check.mjs
specs/v1/: spec-v1.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: macos_video_check.rs  render_api_probe_macos.rs  render_api_spike.rs
src-tauri/src/: keychain.rs  lib.rs  main.rs  models.rs
src-tauri/src/canonical/: cinemeta.rs  mod.rs  resolver.rs  stremio.rs
src-tauri/src/commands/: canonical.rs  catalog.rs  images.rs  lists.rs  mod.rs  multiview.rs  playback.rs  poc.rs  providers.rs  search.rs  settings.rs  stremio.rs  watch.rs
src-tauri/src/db/: canonical.rs  catalog.rs  image_cache.rs  lists.rs  mod.rs  providers.rs  schema.rs  settings.rs  stremio.rs  watch.rs
src-tauri/src/iptv/: m3u.rs  mod.rs  xtream.rs
src-tauri/src/mpv/: compositor.rs  mod.rs  player.rs
src-tauri/tests/: milestone1.rs  milestone10.rs  milestone14.rs  milestone2.rs  milestone21.rs  milestone22.rs  milestone27.rs  milestone28.rs  milestone29.rs  milestone3.rs  milestone39.rs  milestone4.rs  milestone40.rs  milestone41.rs  milestone42.rs  milestone43.rs  milestone44.rs  milestone5.rs  milestone6.rs  milestone7.rs  milestone8.rs  milestone9.rs
src/components/canonical/: CanonicalBrowse.tsx  CanonicalCard.tsx  CanonicalDetail.tsx  CanonicalGrid.tsx  ManualMatch.tsx  ProviderBrowse.tsx  SourcePicker.tsx
src/components/common/: CachedImage.tsx  CatalogPlaceholder.tsx  ConfirmDialog.tsx  ContextMenu.tsx  Placeholder.tsx  ScrollRow.tsx  SkeletonCard.tsx  Toast.tsx  WarningBanner.tsx
src/components/home/: ContinueWatchingSeriesDialog.tsx  KeepWatchingCard.tsx  ListCoverCard.tsx  MediaRow.tsx  MyListsRow.tsx
src/components/layout/: CategoryPanel.tsx  Header.tsx  Sidebar.tsx  TopNav.tsx
src/components/lists/: AddToListMenu.tsx  ListEditorDialog.tsx
src/components/live/: ChannelCard.tsx  ChannelFilterBar.tsx  ChannelList.tsx  RecentChannelsRow.tsx
src/components/player/: BufferingOverlay.tsx  MultiView.tsx  PlayerControls.tsx  PlayerOverlay.tsx  ResumeDialog.tsx  TrackSelector.tsx  VolumeControl.tsx  multiViewLayout.ts
src/components/providers/: ProviderCard.tsx  ProviderForm.tsx  ProviderList.tsx
src/components/search/: SearchBar.tsx  SearchOverlay.tsx  SearchResultGroup.tsx  SearchResults.tsx  SearchResultsPage.tsx
src/components/vod/: EpisodeList.tsx  GenreRows.tsx  HeroBackdrop.tsx  MoreLikeThis.tsx  MovieCard.tsx  MovieDetail.tsx  MovieGrid.tsx  PosterGrid.tsx  SeasonSelect.tsx  SeriesCard.tsx  SeriesDetail.tsx  SeriesGrid.tsx  WatchProgressOverlay.tsx
src/hooks/: useCatalog.ts
src/lib/: devMock.ts  imageCache.ts  keyboard.ts  searchDedup.ts  tauri.ts  updater.ts  useDensity.ts  useProviderBadge.ts  utils.ts  viewTransition.ts
src/pages/: Home.tsx  ListDetail.tsx  LiveTV.tsx  Movies.tsx  Settings.tsx  TVShows.tsx
src/poc/mse/: MseMultiViewPoc.tsx  MseTile.tsx  pocApi.ts
src/store/: catalogStore.ts  listsStore.ts  multiViewStore.ts  playerStore.ts  progressStore.ts  providerStore.ts  searchStore.ts  settingsStore.ts
src/types/: index.ts
