[package]
name = "proscenium"
version = "0.1.0"
description = "Cross-platform desktop IPTV client"
edition = "2021"

[lib]
name = "proscenium_lib"
crate-type = ["lib"]
# The lib test harness links the full GUI stack but (unlike targets under
# tests/) gets no Common-Controls manifest from build.rs, so it cannot load
# on Windows. All tests live in tests/; there are no unit tests to lose.
test = false
doctest = false

[features]
# Enabled for production builds (the Tauri CLI does this automatically).
# Without it the binary tries to load the dev server URL instead of the
# embedded frontend assets. For direct cargo builds:
#   cargo build --release --features custom-protocol
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api turns on the transparent-background API, which the macOS
# video host relies on: mpv renders into a native NSView placed *behind* the
# WebView, and the page only shows it through where it paints transparent.
tauri = { version = "2", features = ["macos-private-api"] }
# Auto-updater (Milestone 7). rustls to match the reqwest TLS stack and avoid
# pulling in native-tls/OpenSSL on the GNU toolchain.
tauri-plugin-updater = { version = "2", default-features = false, features = ["rustls-tls"] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["windows-native", "apple-native"] }
flate2 = "1"
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Objective-C runtime for the native video host (NSView behind the WebView).
# Version pinned to the one Tauri already resolves so nothing is duplicated.
objc2 = "0.6"
